# Tooldev-Assignment

./: CMakeLists.txt  License.txt
CommandLineProject/: CMakeLists.txt  main.cpp
CommonCodeProject/: CMakeLists.txt  Conversion.cpp  Conversion.h
GUIProject/: CMakeLists.txt  main.cpp  minecraftscene.mtl  objForm.cpp  objForm.h  objForm.ui
UnitTests/: CMakeLists.txt  UnitTestsMain.cpp
